# solagent-vault

./: .gitignore  Anchor.toml  README.md  SKILL.md  TESTS_VERIFICATION.md  package.json  test-b64.txt  test-base64.txt  tsconfig.json  txtx.yml
app/: package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/dashboard/: page.tsx
app/src/components/: agent-list-card.tsx  agent-register-form.tsx  agent-terminal.tsx  autopilot-panel.tsx  dashboard-simulator.tsx  error-modal-overlay.tsx  faucet-panel.tsx  simulator-hotkey-card.tsx  solana-provider.tsx  spending-policy-test-card.tsx  vault-init-panel.tsx
app/src/components/wizard/: ai-config-modal.tsx  cognitive-audit-panel.tsx  data-stream-ledger.tsx  fleet-grid.tsx  fleet-topology-map.tsx  flow-walkthrough-slide.tsx  orchestrator-panel.tsx  performance-telemetry.tsx  status-monitor.tsx  step-agent-pda.tsx  step-ai-solver.tsx  step-stress-test.tsx  step-token-deposit.tsx  step-wallet-faucet.tsx  wizard-step-layout.tsx
app/src/hooks/: use-agent-state.ts  use-anchor-program.ts  use-simulator-state.ts
app/src/idl/: solagent_vault.json
programs/solagent-vault/: Cargo.toml
programs/solagent-vault/src/: errors.rs  lib.rs  state.rs
programs/solagent-vault/src/instructions/: close_agent.rs  create_agent.rs  deposit.rs  initialize_vault.rs  mod.rs  set_config.rs  spend.rs  withdraw.rs
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: local-llm-agent.ts  simulate-agent.ts
tests/: .test_agent_id  01_initialize_vault.ts  02_create_agent.ts  03_deposit.ts  04_spend.ts  05_set_config.ts  06_withdraw.ts  07_close_agent.ts  solagent-vault.ts
