[package]
name = "solagent-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solagent_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
litesvm = "0.12.0"
solana-address = "2.6.0"
solana-keypair = "3.1.2"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"
solana-message = "3.1.0"
solana-system-interface = "3.2.0"
solana-instruction = "3.4.0"
solana-hash = "3.1.0"
solagent-vault = { path = ".", features = ["cpi"] }


